# al-sudoku

./: Cargo.toml  README.md
src/: lib.rs
web/: index.html  index.js
